--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/animate.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/2.0.5/css/fluidbox.min.css">
         <link rel="stylesheet" href="css/morphext.css">
-        <link rel="stylesheet" href="css/aos.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <script src="https://kit.fontawesome.com/02c4d8a65e.js"></script>
     </head>
@@ -69,7 +70,7 @@
                                     ottica SEO</strong>, aiuto le aziende a crescere in rete e a migliorare la propria
                                 presenza online.</p>
                     </div>
-                    <div class="showcase-image">
+                    <div class="showcase-image" data-aos="fade-down" data-aos-duration="3000">
                         <div class="showcase-image-bg">
                             <img src="img/freelance-image.svg">
                         </div>
@@ -109,7 +110,7 @@
         <section class="services">
             <h2 class="services-title">I miei servizi</h2>
             <div class="container">
-                <div class="service">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
                     <img src="img/web-design-responsive.svg">
                     <div class="service-text">
                         <h3 class="service-name">Web Design Responsive</h3>
@@ -123,7 +124,7 @@
                     </div>
 
                 </div>
-                <div class="service">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
                     <img src="img/brand-identity-e-logo-design.svg">
                     <div class="service-text">
                         <h3 class="service-name">Brand Identity e Logo Design</h3>
@@ -138,7 +139,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="service">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
                     <img src="img/graphic-design.svg">
                     <div class="service-text">
                         <h3 class="service-name">Graphic Design</h3>
@@ -150,7 +151,7 @@
                                 class="text-highlight">per la stampa e per il web</strong>.</p>
                     </div>
                 </div>
-                <div class="service">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
                     <img src="img/SEO-e-ottimizzazione.svg">
                     <div class="service-text">
                         <h3 class="service-name">SEO e Ottimizzazione</h3>
@@ -172,29 +173,29 @@
         <section class="portfolio">
             <h2 class="portfolio-title">Portfolio</h2>
             <div class="container">
-                <div class="portfolio-item">
-                    <img src="img/indelux-logo-portfolio-small.jpg">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="0" data-aos-offset="200">
+                    <a href="img/indelux-logo-portfolio.jpg"><img src="img/indelux-logo-portfolio-small.jpg" alt=""></a>
                 </div>
-                <div class="portfolio-item">
-                    <img src="img/mycheck-logo-portfolio-small.jpg">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="200" data-aos-offset="200">
+                    <a href="img/mycheck-logo-portfolio.jpg"><img src="img/mycheck-logo-portfolio-small.jpg"></a>
                 </div>
-                <div class="portfolio-item">
-                    <img src="img/olivia-epoupa-logo-portfolio-small.jpg">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="400" data-aos-offset="200">
+                    <a href="img/olivia-epoupa-logo-portfolio.jpg"><img src="img/olivia-epoupa-logo-portfolio-small.jpg"></a>
                 </div>
-                <div class="portfolio-item">
-                    <img src="img/rebirth-logo-portfolio-small.jpg">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="600" data-aos-offset="200">
+                    <a href="img/rebirth-logo-portfolio.jpg"><img src="img/rebirth-logo-portfolio-small.jpg"></a>
                 </div>
-                <div class="portfolio-item">
-                    <img src="img/beastking-logo-portfolio-small.jpg">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="800" data-aos-offset="200">
+                    <a href="img/beastking-logo-portfolio.jpg"><img src="img/beastking-logo-portfolio-small.jpg"></a>
                 </div>
-                <div class="portfolio-item">
-                    <img src="img/horizon-logo-portfolio-small.jpg">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="1000" data-aos-offset="200">
+                    <a href="img/horizon-logo-portfolio.jpg"><img src="img/horizon-logo-portfolio-small.jpg"></a>
                 </div>
-                <div class="portfolio-item">
-                    <img src="img/eyeful-studio-logo-portfolio.png">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="1200" data-aos-offset="200">
+                    <a href="img/eyeful-studio-logo-portfolio.png"><img src="img/eyeful-studio-logo-portfolio.png"></a>
                 </div>
-                <div class="portfolio-item">
-                    <img src="img/mms-logo-portfolio-small.jpg">
+                <div class="portfolio-item" data-aos="flip-left" data-aos-duration="2000" data-aos-delay="1400" data-aos-offset="200">
+                    <a href="img/mms-logo-portfolio-small.jpg"><img src="img/mms-logo-portfolio-small.jpg"></a>
                 </div>
             </div>
         </section>
@@ -221,15 +222,11 @@
 
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="js/morphext.min.js"></script>
-        <script src="js/aos.js"></script>
-        <script>function openMenu() {
-                var x = document.getElementById("main-nav");
-                if (x.className === "main-nav") {
-                    x.className += " responsive";
-                } else {
-                    x.className = "main-nav";
-                }
-            }</script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/2.0.5/js/jquery.fluidbox.min.js"></script>
+        <script>$(function () {
+            $(".portfolio .portfolio-item a").fluidbox();
+        });</script>
         <script>
             $("#js-rotating").Morphext({
                 animation: "bounceIn",
@@ -239,6 +236,17 @@
                     // Called after the entrance animation is executed.
                 }
             });</script>
+            <script>
+                AOS.init();
+              </script>
+            <!-- <script>function openMenu() {
+                var x = document.getElementById("main-nav");
+                if (x.className === "main-nav") {
+                    x.className += " responsive";
+                } else {
+                    x.className = "main-nav";
+                }
+            }</script> -->
     </body>
 
 </html>
