--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                             <img src="img/freelance-image.svg">
                         </div>
                     </div>
-                </div>  
+                </div>
             </section>
-            <div class="home-cta">
+            <a  href="#about" class="scrollLink home-cta">
                 <p>Scopri i miei servizi</p>
                 <i class="fas fa-arrow-circle-down"></i>
-            </div>
+            </a>
         </main>
-        
+
         <section class="presentation" id="about">
             <div class="container">
                 <img class="my-image" src="img/my-image.jpg">
@@ -108,7 +108,7 @@
         <section class="services" id="services">
             <h2 class="services-title">I miei servizi</h2>
             <div class="container">
-                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="100">
                     <img src="img/web-design-responsive.svg">
                     <div class="service-text">
                         <h3 class="service-name">Web Design Responsive</h3>
@@ -122,7 +122,7 @@
                     </div>
 
                 </div>
-                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="100">
                     <img src="img/brand-identity-e-logo-design.svg">
                     <div class="service-text">
                         <h3 class="service-name">Brand Identity e Logo Design</h3>
@@ -137,7 +137,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="100">
                     <img src="img/graphic-design.svg">
                     <div class="service-text">
                         <h3 class="service-name">Graphic Design</h3>
@@ -149,7 +149,7 @@
                                 class="text-highlight">per la stampa e per il web</strong>.</p>
                     </div>
                 </div>
-                <div class="service" data-aos="fade-right" data-aos-duration="2000"  data-aos-offset="100">
+                <div class="service" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="100">
                     <img src="img/SEO-e-ottimizzazione.svg">
                     <div class="service-text">
                         <h3 class="service-name">SEO e Ottimizzazione</h3>
@@ -174,11 +174,12 @@
                 <div class="portfolio-item">
                     <a href="img/indelux-logo-portfolio.jpg"><img src="img/indelux-logo-portfolio-small.jpg" alt=""></a>
                 </div>
-                <div class="portfolio-item" >
+                <div class="portfolio-item">
                     <a href="img/mycheck-logo-portfolio.jpg"><img src="img/mycheck-logo-portfolio-small.jpg"></a>
                 </div>
                 <div class="portfolio-item">
-                    <a href="img/olivia-epoupa-logo-portfolio.jpg"><img src="img/olivia-epoupa-logo-portfolio-small.jpg"></a>
+                    <a href="img/olivia-epoupa-logo-portfolio.jpg"><img
+                            src="img/olivia-epoupa-logo-portfolio-small.jpg"></a>
                 </div>
                 <div class="portfolio-item">
                     <a href="img/rebirth-logo-portfolio.jpg"><img src="img/rebirth-logo-portfolio-small.jpg"></a>
@@ -202,19 +203,19 @@
             <div class="container">
                 <form name="contact" method="post" action="https://formspree.io/mvoajdyd">
                     <div class="contact-upper">
-                    <label for="name">Nome</label>
-                    <input type="text" name="name" placeholder="Nome" required>
-                    <label for="email">Email</label>
-                    <input type="email" name="email" placeholder="Email" required>
-                    <label for="phone">Telefono</label>
-                    <input type="tel" name="phone" placeholder="Numero di telefono">
+                        <label for="name">Nome</label>
+                        <input type="text" name="name" placeholder="Nome" required>
+                        <label for="email">Email</label>
+                        <input type="email" name="email" placeholder="Email" required>
+                        <label for="phone">Telefono</label>
+                        <input type="tel" name="phone" placeholder="Numero di telefono">
                     </div>
                     <img src="img/mail.svg">
                     <label for="message">Messaggio</label>
                     <textarea name="message" placeholder="Il tuo messaggio" required></textarea>
                     <input type="submit" value="Invia">
                 </form>
-                
+
             </div>
         </section>
 
@@ -223,8 +224,8 @@
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fluidbox/2.0.5/js/jquery.fluidbox.min.js"></script>
         <script>$(function () {
-            $(".portfolio .portfolio-item a").fluidbox();
-        });</script>
+                $(".portfolio .portfolio-item a").fluidbox();
+            });</script>
         <script>
             $("#js-rotating").Morphext({
                 animation: "bounceIn",
@@ -234,16 +235,16 @@
                     // Called after the entrance animation is executed.
                 }
             });</script>
-            <script>
-                AOS.init();
-              </script>
-              <script>$(document).ready(function(){
-                $( "a.scrollLink" ).click(function( event ) {
+        <script>
+            AOS.init();
+        </script>
+        <script>$(document).ready(function () {
+                $("a.scrollLink").click(function (event) {
                     event.preventDefault();
                     $("html, body").animate({ scrollTop: $($(this).attr("href")).offset().top }, 500);
                 });
             });</script>
-            <!-- <script>function openMenu() {
+        <!-- <script>function openMenu() {
                 var x = document.getElementById("main-nav");
                 if (x.className === "main-nav") {
                     x.className += " responsive";
